@@ -44,7 +44,9 @@
     <profile>
       <id>oai</id>
       <activation>
-        <activeByDefault>true</activeByDefault>
+        <file>
+          <exists>../dspace-oai/pom.xml</exists>
+        </file>
         <property>
           <name>oai</name>
         </property>
@@ -62,10 +64,12 @@
     <profile>
       <id>jspui</id>
       <activation>
-        <activeByDefault>true</activeByDefault>
         <property>
-          <name>jspui</name>
+          <name>!nojspui</name>
         </property>
+        <file>
+          <exists>../dspace-jspui/pom.xml</exists>
+        </file>
       </activation>
       <modules>
         <module>../language-packs</module>
@@ -80,10 +84,9 @@
     <profile>
       <id>xmlui</id>
       <activation>
-        <activeByDefault>true</activeByDefault>
-        <property>
-          <name>xmlui</name>
-        </property>
+        <file>
+          <exists>../dspace-xmlui/pom.xml</exists>
+        </file>
       </activation>
       <modules>
         <module>../language-packs</module>
@@ -98,16 +101,150 @@
     <profile>
       <id>lni</id>
       <activation>
-        <activeByDefault>true</activeByDefault>
         <property>
-          <name>lni</name>
+          <name>!no-lni</name>
         </property>
+        <file>
+          <exists>../dspace-lni/pom.xml</exists>
+        </file>
       </activation>
       <modules>
         <module>../language-packs</module>
         <module>../dspace-api</module>
         <module>../dspace-lni</module>
       </modules>
+    </profile>
+    <!-- Database profiles must appear before the setup -->
+    <profile>
+      <id>postgres</id>
+      <activation>
+        <property>
+          <name>!db.name</name>
+        </property>
+      </activation>
+      <properties>
+        <db.sql.dir>etc</db.sql.dir>
+        <db.name>postgres</db.name>
+        <db.driver>org.postgresql.Driver</db.driver>
+      </properties>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>sql-maven-plugin</artifactId>
+            <dependencies>
+              <dependency>
+                <groupId>postgresql</groupId>
+                <artifactId>postgresql</artifactId>
+                <version>8.1-404.jdbc3</version>
+              </dependency>
+            </dependencies>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>oracle</id>
+      <activation>
+        <property>
+          <name>db.name</name>
+          <value>oracle</value>
+        </property>
+      </activation>
+      <properties>
+        <db.sql.dir>etc/oracle</db.sql.dir>
+        <db.name>oracle</db.name>
+        <db.driver>oracle.jdbc.OracleDriver</db.driver>
+      </properties>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>sql-maven-plugin</artifactId>
+            <dependencies>
+              <dependency>
+                 <groupId>com.oracle</groupId>
+                 <artifactId>ojdbc14</artifactId>
+                 <version>10.2.0.2.0</version>
+              </dependency>
+            </dependencies>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>setup-db</id>
+      <activation>
+        <activeByDefault>false</activeByDefault>
+        <property>
+          <name>setup-db</name>
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>sql-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>setup-db</id>
+                <phase>package</phase>
+                <goals>
+                  <goal>execute</goal>
+                </goals>
+                <configuration>
+                  <autocommit>true</autocommit>
+	              <username>${db.username}</username>
+	              <password>${db.password}</password>
+	              <url>${db.url}</url>
+	              <driver>${db.driver}</driver>
+                  <srcFiles>
+                    <srcFile>${db.sql.dir}/database_schema.sql</srcFile>
+                  </srcFiles>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <artifactId>maven-antrun-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>load-registries</id>
+                <phase>package</phase>
+                <configuration>
+                  <tasks>
+                    <java classname="org.dspace.administer.RegistryLoader" fork="yes" failonerror="yes">
+                      <classpath>
+                        <fileset dir="${project.build.directory}">
+                          <include name="**/*.jar" />
+                        </fileset>
+                      </classpath>
+                      <sysproperty key="log4j.configuration" value="etc/log4j.build.properties" />
+                      <sysproperty key="dspace.configuration" value="${project.build.directory}/${project.build.finalName}.dir/config/dspace.cfg" />
+                      <arg value="-bitstream" />
+                      <arg value="${project.build.directory}/${project.build.finalName}.dir/config/registries/bitstream-formats.xml" />
+                    </java>
+                    <java classname="org.dspace.administer.RegistryLoader" fork="yes" failonerror="yes">
+                      <classpath>
+                        <fileset dir="${project.build.directory}">
+                          <include name="**/*.jar" />
+                        </fileset>
+                      </classpath>
+                      <sysproperty key="log4j.configuration" value="etc/log4j.build.properties" />
+                      <sysproperty key="dspace.configuration" value="${project.build.directory}/${project.build.finalName}.dir/config/dspace.cfg" />
+                      <arg value="-dc" />
+                      <arg value="${project.build.directory}/${project.build.finalName}.dir/config/registries/dublin-core-types.xml" />
+                    </java>
+                  </tasks>
+                </configuration>
+                <goals>
+                  <goal>run</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
     </profile>
   </profiles>
   <build>
@@ -129,6 +266,27 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>properties-maven-plugin</artifactId>
+        <version>1.0-SNAPSHOT</version>
+        <executions>
+          <execution>
+            <phase>initialize</phase>
+            <goals>
+              <goal>read-project-properties</goal>
+            </goals>
+            <configuration>
+              <files>
+                <file>${db.name}-${env}.properties</file>
+              </files>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
+  <properties>
+    <env>dev</env>
+  </properties>
 </project>
