@@ -1,0 +1,4 @@
+db.url=jdbc:postgresql://localhost:5432/dspace
+
+db.username=dspace
+db.password=dspace
