@@ -21,10 +21,19 @@
         <include>README</include>
       </includes>
       <excludes>
-      	<exclude>src</exclude>
+         <exclude>src</exclude>
+         <exclude>config/dspace.cfg</exclude>
       </excludes>
     </fileSet>
   </fileSets>
+
+  <files>
+    <file>
+      <source>config/dspace.cfg</source>
+      <outputDirectory>config</outputDirectory>
+      <filtered>true</filtered>
+    </file>
+  </files>
   
   <dependencySets>
     <dependencySet>
